# TAIS

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOVER_REPORT.md  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  SECURITY.md  VERSION  cli.py  collect_signatures.py  discover_roles.py  discovered_role_mapping.json  grounding_transfer_test.py  index.html  mega_fused_nl_test.py  package-lock.json  package.json  phase1_validation.py  production_benchmark.py  pyproject.toml  requirements.txt  ruff.toml  structural_signatures.json  swarm_v5.py  tais_api.py
.github/: PULL_REQUEST_TEMPLATE.md
archive/: CODE_DUMP.md  README.md  swarm_server.py  swarm_v3.py  swarm_v4.py  tais_lang_v2_predator.py  tais_lang_v2_results.json
colonies/: test_v4.json  test_v55_smoke.json  test_v5_final.json
docs/: ABLATION_V2_REPORT.md  ACTION_ROLE_TRANSFER_REPORT.md  ANALOGY_ACTION_PRIOR_REPORT.md  CODEBASE_MANIFEST.md  CROSS_DOMAIN_TRANSFER_REPORT.md  MEGA_FUSED_NL_REPORT.md  PAPER_RESULT_AUDIT.md  PAPER_SUBMISSION_CHECKLIST.md  PHASE0_PHASE2_PHASE1_CHANGELOG.md  PHASE1_5_PREDICTION_REPORT.md  PHASE1_6_RUNNER_BISECT_REPORT.md  PHASE1_VALIDATION_REPORT.md  PHASE4_HAZARD_TRANSFER_REPORT.md  PHASE5_LOGIC_TRANSFER_REPORT.md  PHASE7_8_LOAD_BEARING_ARCHITECTURE_REPORT.md  PHASE_A_CONVERGENCE_REPORT.md  PHASE_A_ENGINE_SELECTION_REPORT.md  PHASE_A_SPEECH_TOKEN_PORTABILITY_REPORT.md  PHASE_B_DOMAIN_DSL_REPORT.md  PHASE_C_EXPERIMENT_FRAMEWORK_REPORT.md  PHASE_D_KILLER_EXPERIMENTS_REPORT.md  PHASE_E_VISUALIZATION_REPORT.md  PHASE_F2_PAPER_DEFINING_EXPERIMENTS_REPORT.md  PHASE_R2_ROLE_ONTOLOGY_ROBUSTNESS_REPORT.md  PHASE_R3_BASELINE_COMPARISON_REPORT.md  PHASE_R4_LARGE_DOMAIN_TRANSFER_REPORT.md  PHASE_R5_PREDICTION_GATING_REPORT.md  PHASE_R6_LEARNED_ROLE_COMPATIBILITY_REPORT.md  PRODUCTION_BENCHMARK_REPORT.md  README.md  RELEASE_NOTES_v0.2.0.md  SEQUENTIAL_CONTINUITY_GATING_REPORT.md  TAIS_BASE_MODEL_CRITERIA.md  TAIS_FULL_DETAILED_ROADMAP.md  TAIS_GRTL_RESEARCH_REPORT.md  TAIS_UNIVERSAL_ROADMAP.md  TEST_REPORT.md  domain-guide.md  experiment-guide.md  global_fix_report.md  (+3 more)
examples/: generate_figures.py  load_yaml_domain.py  quickstart_mote.py  run_experiment_suite.py
experiments/: __init__.py  ablation_runner.py  choose_action_design_sweep.py  cognitive_transfer_runner.py  hazard_transfer_runner.py  logic_transfer_runner.py  predict_calibration_sweep.py  realworld_tests.py  research_stress_test.py  speech_token_portability.py  statistical_replication.py  stress_test.py  webnav_transfer_runner.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
paper/: references.bib
results/: README.md  ablation_results.csv  ablation_results.json  ablation_results.txt  ablation_smoke.csv  ablation_smoke.json  ablation_smoke.txt  cross_domain_transfer_results.json  statistical_replication_results.json
scripts/: audit_paper_results.py  baseline_comparison_test.py  breakthrough_validation.py  cleanup_tracked_artifacts.sh  collect_signatures.py  generate_paper_figures.py  (+5 more)
(+312 files in other folders)
